--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@
 !/app/assets/builds/.keep
 
 /node_modules
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
