--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,9 @@
-require:
+plugins:
   - rubocop-factory_bot
   - rubocop-rails
   - rubocop-performance
   - rubocop-rspec
   - rubocop-capybara
-  - rubocop-rspec
   - rubocop-rspec_rails
 
 AllCops:
@@ -465,8 +464,6 @@ Performance/StringInclude: # new in 1.7
 Performance/Sum: # new in 1.8
   Enabled: true
 
-RSpec/StringAsInstanceDoubleConstant: # new in 3.1
-  Enabled: true
 Capybara/ClickLinkOrButtonStyle: # new in 2.19
   Enabled: true
 Capybara/MatchStyle: # new in 2.17
@@ -518,3 +515,40 @@ RSpec/ExampleLength:
 
 RSpec/MultipleExpectations:
   Enabled: false
+
+Lint/ArrayLiteralInRegexp: # new in 1.71
+  Enabled: true
+Lint/ConstantReassignment: # new in 1.70
+  Enabled: true
+Lint/CopDirectiveSyntax: # new in 1.72
+  Enabled: true
+Lint/RedundantTypeConversion: # new in 1.72
+  Enabled: true
+Lint/SharedMutableDefault: # new in 1.70
+  Enabled: true
+Lint/SuppressedExceptionInNumberConversion: # new in 1.72
+  Enabled: true
+Lint/UselessConstantScoping: # new in 1.72
+  Enabled: true
+Style/ComparableBetween: # new in 1.74
+  Enabled: true
+Style/HashFetchChain: # new in 1.75
+  Enabled: true
+Style/HashSlice: # new in 1.71
+  Enabled: true
+Style/ItAssignment: # new in 1.70
+  Enabled: true
+Style/ItBlockParameter: # new in 1.75
+  Enabled: true
+Style/RedundantFormat: # new in 1.72
+  Enabled: true
+Rails/MultipleRoutePaths: # new in 2.29
+  Enabled: true
+Rails/StrongParametersExpect: # new in 2.29
+  Enabled: true
+Performance/ZipWithoutBlock: # new in 1.24
+  Enabled: true
+Capybara/FindAllFirst: # new in 2.22
+  Enabled: true
+Capybara/NegationMatcherAfterVisit: # new in 2.22
+  Enabled: true
