--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# SimpleCov coverage artifacts
+/coverage
