--- a/config/settings.yml
+++ b/config/settings.yml
@@ -10,3 +10,4 @@ reports:
 # mappings from authorization role to workgroup name
 authorization_workgroup_names:
   administrators: 'dlss:hydrus-app-administrators'
+  collection_creators: 'dlss:hydrus-app-collection-creators'
