--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "nodemon": "^3.1.9",
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "stylelint": "^16.19.0"
   },
   "scripts": {
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
