--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postcss-cli": "^11.0.0",
     "sass": "^1.83.0",
     "standard": "^17.1.2",
-    "stylelint": "^16.19.0"
+    "stylelint": "^16.19.0",
+    "stylelint-config-standard-scss": "^14.0.0"
   },
   "scripts": {
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
