--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ config/environments/*.local.yml
 
 # SimpleCov coverage artifacts
 /coverage
+
+# Ignore the generated honeybadger config (for now)
+# TODO: Determine if we want to use this new config file
+/config/honeybadger.yml
+
