--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -558,3 +558,6 @@ Capybara/FindAllFirst: # new in 2.22
   Enabled: true
 Capybara/NegationMatcherAfterVisit: # new in 2.22
   Enabled: true
+
+RSpec/IncludeExamples: # new in 3.6
+  Enabled: true
